--- a/slides/NLP-LLM.tex
+++ b/slides/NLP-LLM.tex
@@ -40,7 +40,7 @@
 {\raise-0.05em\hbox{\Large $#1$}}{\hbox{\large $#1$}}{#1}}}
 \newcommand{\bigtimes}{\BIGOP{\times}}
 \vspace{-0.5cm}
-\title{Natural Language Processing \\ Contextualized Embeddings, Pre-Training, Fine-Tuning and Large Language Models}
+\title{Natural Language Processing \\ Contextualized Embeddings and Large Language Models}
 \vspace{-0.5cm}
 \author[Felipe Bravo Márquez]{\footnotesize
 %\author{\footnotesize  
