--- a/slides/NLP-PLM.tex
+++ b/slides/NLP-PLM.tex
@@ -111,7 +111,7 @@ p(x) &\geq 0 \quad \text{for all } x \in V^*
 \end{align*}
 
 
-\item Examples of probability distributions:
+\item Examples of probabilities assigned to sentences:
 \begin{align*}
 p(\text{the STOP}) &= 10^{-12} \\
 p(\text{the fan STOP}) &= 10^{-8} \\
