--- a/slides/NLP-HMM.tex
+++ b/slides/NLP-HMM.tex
@@ -171,57 +171,42 @@
   \end{itemize}
 \end{frame}
 
+
 \begin{frame}
-  \frametitle{Supervised Learning Problems}
-  \begin{itemize}
-    \item We have training examples $x^{(i)}$, $y^{(i)}$ for $i = 1, \ldots, m$. Each $x^{(i)}$ is an input, each $y^{(i)}$ is a label.
-    \item Task is to learn a function $f$ mapping inputs $x$ to labels $f(x)$.
-    \item Conditional models:
+  \frametitle{Sequence Labeling as Supervised Learning}
+
     \begin{itemize}
-      \item Learn a distribution $p(y|x)$ from training examples.
-      \item For any test input $x$, define $f(x) = \arg \max_y p(y|x)$.
+      \item We have a sequence of inputs $x = (x_1, x_2, \ldots, x_n)$ and corresponding labels $y = (y_1, y_2, \ldots, y_n)$.
+      \item Task is to learn a function $f$ that maps input sequences to label sequences: $f(x_1,x_2, \ldots, x_n) = y_1, y_2, \ldots, y_n$.
+      \item We have a training set of labeled sequences: $\{(x^{(1)}, y^{(1)}), (x^{(2)}, y^{(2)}), \ldots, (x^{(m)}, y^{(m)})\}$.
     \end{itemize}
-  \end{itemize}
+  
 \end{frame}
 
 \begin{frame}
-  \frametitle{Generative Models}
+  \frametitle{Generative Approach for Sequence Labeling}
+  \scriptsize
   \begin{itemize}
-    \item Given training examples $x^{(i)}$, $y^{(i)}$ for $i = 1, \ldots, m$. The task is to learn a function $f$ that maps inputs $x$ to labels $f(x)$.
-    \item Generative models:
-    \begin{itemize}
-      \item Learn the joint distribution $p(x, y)$ from the training examples.
-      \item Often, we have $p(x, y) = p(y)p(x|y)$.
-      \item Note: We then have
-      \[
-        p(y|x) = \frac{p(y)p(x|y)}{p(x)} \quad \text{where} \quad p(x) = \sum_y p(y)p(x|y).
-      \]
+    \item Generative models such as Naive Bayes can be used for sequence labeling tasks in NLP.
+    \item Approach:
+    \begin{itemize}\scriptsize
+      \item Training: Learn the joint distribution $p(x_1,x_2, \ldots, x_n,y_1, y_2, \ldots, y_n)$ of input sequences.
+      \item Decoding: Use the learned distribution to predict label sequences for new input sequences.
     \end{itemize}
+      \item Decoding in sequence labeling involves finding the label sequence with the highest joint probability: $\arg\max_{y_1, y_2, \ldots, y_n}p(x_1,x_2, \ldots, x_n,y_1, y_2, \ldots, y_n)$.
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Decoding with Generative Models}
-  \begin{itemize}
-    \item Given training examples $x^{(i)}$, $y^{(i)}$ for $i = 1, \ldots, m$. The task is to learn a function $f$ that maps inputs $x$ to labels $f(x)$.
-    \item Generative models:
-    \begin{itemize}
-      \item Learn the joint distribution $p(x, y)$ from the training examples.
-      \item Often, we have $p(x, y) = p(y)p(x|y)$.
-    \end{itemize}
-    \item Output from the model:
-\[
-\begin{aligned}
-f(x) = \arg\max_y p(y|x) &= \arg\max_y \frac{p(y)p(x|y)}{p(x)} \\
-&= \arg\max_y p(y)p(x|y)
-\end{aligned}
-\]
-  \end{itemize}
-\end{frame}
+
+
+
+
 
 \begin{frame}
   \frametitle{Hidden Markov Models}
+  \scriptsize
   \begin{itemize}
+    \item  HMMs provide a principled way to handle sequence labeling problems using generative modeling and efficient decoding algorithms.
     \item We have an input sentence $x = x_1, x_2, \ldots, x_n$ ($x_i$ is the $i$-th word in the sentence).
     \item We have a tag sequence $y = y_1, y_2, \ldots, y_n$ ($y_i$ is the $i$-th tag in the sentence).
     \item We'll use an HMM to define $p(x_1, x_2, \ldots, x_n, y_1, y_2, \ldots, y_n)$ for any sentence $x_1, \ldots, x_n$ and tag sequence $y_1, \ldots, y_n$ of the same length. \cite{kupiec1992robust}
